--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rest.me - Бронирование столиков онлайн</title>
+    <title>Restio - Бронирование столиков онлайн</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🍽️</text></svg>">
 </head>
@@ -13,7 +13,7 @@
         <div class="header-content">
             <a href="/" class="logo">
                 <span class="logo-emoji">🍽️</span>
-                Rest.<span>me</span>
+                Rest<span>io</span>
             </a>
             <div class="header-buttons">
                 <a href="#" class="btn btn-primary">Войти</a>
@@ -30,7 +30,7 @@
                         Бронируйте столики онлайн
                     </h1>
                     <p class="hero-subtitle">
-                        Забудьте о звонках. Бронируйте столики в ресторанах быстро и удобно через Rest.me
+                        Забудьте о звонках. Бронируйте столики в ресторанах быстро и удобно через Restio
                     </p>
                     <a href="#" class="btn btn-primary">
                         Попробовать
@@ -87,10 +87,10 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-copyright">
-                    © 2025 Rest.me
+                    © 2025 Restio
                 </div>
-                <a href="mailto:contact@rest.me" class="footer-link">
-                    contact@rest.me
+                <a href="mailto:contact@restio.info" class="footer-link">
+                    contact@restio.info
                 </a>
             </div>
         </div>
