--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
                 Rest<span>io</span>
             </a>
             <div class="header-buttons">
-                <a href="#" class="btn btn-primary">Войти</a>
+                <a href="https://wa.me/77713760430?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5!%20%D0%9F%D0%B8%D1%88%D1%83%20%D0%B2%D0%B0%D0%BC%20%D0%BF%D0%BE%20%D0%BF%D0%BE%D0%B2%D0%BE%D0%B4%D1%83%20%D1%81%D0%B5%D1%80%D0%B2%D0%B8%D1%81%D0%B0%20Restio.%20%D0%A0%D0%B0%D1%81%D1%81%D0%BA%D0%B0%D0%B6%D0%B8%D1%82%D0%B5%2C%20%D0%BF%D0%BE%D0%B6%D0%B0%D0%BB%D1%83%D0%B9%D1%81%D1%82%D0%B0%2C%20%D0%BF%D0%BE%D0%B4%D1%80%D0%BE%D0%B1%D0%BD%D0%B5%D0%B5." target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                    <svg class="btn-icon" width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12.04 2C6.58 2 2.13 6.45 2.13 11.91C2.13 13.66 2.59 15.31 3.4 16.78L2.04 22L7.76 20.64C9.18 21.39 10.76 21.81 12.04 21.81C17.5 21.81 21.95 17.36 21.95 11.91C21.95 6.45 17.5 2 12.04 2ZM16.56 14.99C16.28 15.78 15.18 16.34 14.68 16.45C14.17 16.56 13.52 16.58 13.13 16.5C12.75 16.42 11.78 16.06 10.7 15.11C9.29 13.84 8.36 12.19 8.18 11.85C8 11.51 7.25 10.56 7.25 9.53C7.25 8.5 7.97 7.8 8.21 7.56C8.45 7.32 8.76 7.25 9.03 7.25C9.3 7.25 9.55 7.26 9.76 7.29C10 7.32 10.18 7.34 10.37 7.74C10.59 8.21 11.02 9.42 11.08 9.53C11.14 9.64 11.2 9.78 11.1 9.93C11 10.08 10.95 10.18 10.81 10.32C10.67 10.47 10.54 10.58 10.41 10.72C10.28 10.86 10.15 11.01 10.33 11.31C10.51 11.61 11.01 12.31 11.69 12.94C12.57 13.75 13.3 14.04 13.58 14.16C13.86 14.28 14.13 14.24 14.33 14.04C14.56 13.81 14.82 13.49 15.08 13.16C15.34 12.83 15.62 12.78 15.9 12.87C16.18 12.96 17.17 13.49 17.38 13.69C17.59 13.89 17.73 14.03 17.8 14.14C17.87 14.25 17.84 14.56 17.63 14.76C17.43 14.96 16.84 15.2 16.56 14.99Z"/>
+                    </svg>
+                    Связаться
+                </a>
             </div>
         </div>
     </header>
