--- a/index.html
+++ b/index.html
@@ -5,99 +5,221 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restio - Бронирование столиков онлайн</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🍽️</text></svg>">
+    <!-- Добавляем современные шрифты -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- SVG favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><rect x='0' y='0' width='24' height='24' rx='12' fill='%237C3AED'/><circle cx='12' cy='12' r='6' fill='%23EF4444'/></svg>">
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-        <div class="header-content">
-            <a href="/" class="logo">
-                <span class="logo-emoji">🍽️</span>
-                Rest<span>io</span>
-            </a>
-            <nav class="header-nav">
-                <a href="pricing.html" class="nav-link">Тарифы</a>
-            </nav>
-            <div class="header-buttons">
-            
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">
+                <!-- Temporary inline SVG logo -->
+                <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="0" y="8" width="24" height="24" rx="12" fill="#7C3AED"/>
+                    <text x="32" y="26" fill="#1F2937" font-size="20" font-weight="700">Restio</text>
+                    <circle cx="12" cy="20" r="6" fill="#EF4444"/>
+                </svg>
+            </div>
+            <div class="nav-links">
+                <a href="#features">Возможности</a>
+                <a href="#pricing">Тарифы</a>
+                <a href="#contact">Контакты</a>
+                <a href="#demo" class="btn-primary">Попробовать</a>
+            </div>
+        </div>
+    </nav>
+
+    <header class="hero">
+        <div class="hero-background">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="hero-grid">
+                    <div class="hero-text fade-in">
+                        <h1>Бронируйте<br>столики онлайн</h1>
+                        <p class="hero-subtitle">Забудьте о звонках. Бронируйте столики в ресторанах быстро и удобно через Restio</p>
+                        <a href="https://wa.me/77713760430" target="_blank" rel="noopener noreferrer" class="btn-primary">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12.04 2C6.58 2 2.13 6.45 2.13 11.91C2.13 13.66 2.59 15.31 3.4 16.78L2.04 22L7.76 20.64C9.18 21.39 10.76 21.81 12.04 21.81C17.5 21.81 21.95 17.36 21.95 11.91C21.95 6.45 17.5 2 12.04 2ZM16.56 14.99C16.28 15.78 15.18 16.34 14.68 16.45C14.17 16.56 13.52 16.58 13.13 16.5C12.75 16.42 11.78 16.06 10.7 15.11C9.29 13.84 8.36 12.19 8.18 11.85C8 11.51 7.25 10.56 7.25 9.53C7.25 8.5 7.97 7.8 8.21 7.56C8.45 7.32 8.76 7.25 9.03 7.25C9.3 7.25 9.55 7.26 9.76 7.29C10 7.32 10.18 7.34 10.37 7.74C10.59 8.21 11.02 9.42 11.08 9.53C11.14 9.64 11.2 9.78 11.1 9.93C11 10.08 10.95 10.18 10.81 10.32C10.67 10.47 10.54 10.58 10.41 10.72C10.28 10.86 10.15 11.01 10.33 11.31C10.51 11.61 11.01 12.31 11.69 12.94C12.57 13.75 13.3 14.04 13.58 14.16C13.86 14.28 14.13 14.24 14.33 14.04C14.56 13.81 14.82 13.49 15.08 13.16C15.34 12.83 15.62 12.78 15.9 12.87C16.18 12.96 17.17 13.49 17.38 13.69C17.59 13.89 17.73 14.03 17.8 14.14C17.87 14.25 17.84 14.56 17.63 14.76C17.43 14.96 16.84 15.2 16.56 14.99Z"/>
+                            </svg>
+                            Связаться в WhatsApp
+                        </a>
+                    </div>
+                    <div class="hero-illustration fade-in">
+                        <img src="assets/hero.png" alt="Онлайн бронирование столика" class="hero-img">
+                    </div>
+                </div>
             </div>
         </div>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-            <div class="hero-grid">
-                <div class="hero-text fade-in">
-                    <h1 class="hero-title">
-                        Бронируйте столики онлайн
-                    </h1>
-                    <p class="hero-subtitle">
-                        Забудьте о звонках. Бронируйте столики в ресторанах быстро и удобно через Restio
-                    </p>
-                    <a href="https://wa.me/77713760430" target="_blank" rel="noopener noreferrer" class="btn-contact">
-                        <svg class="btn-icon" width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12.04 2C6.58 2 2.13 6.45 2.13 11.91C2.13 13.66 2.59 15.31 3.4 16.78L2.04 22L7.76 20.64C9.18 21.39 10.76 21.81 12.04 21.81C17.5 21.81 21.95 17.36 21.95 11.91C21.95 6.45 17.5 2 12.04 2ZM16.56 14.99C16.28 15.78 15.18 16.34 14.68 16.45C14.17 16.56 13.52 16.58 13.13 16.5C12.75 16.42 11.78 16.06 10.7 15.11C9.29 13.84 8.36 12.19 8.18 11.85C8 11.51 7.25 10.56 7.25 9.53C7.25 8.5 7.97 7.8 8.21 7.56C8.45 7.32 8.76 7.25 9.03 7.25C9.3 7.25 9.55 7.26 9.76 7.29C10 7.32 10.18 7.34 10.37 7.74C10.59 8.21 11.02 9.42 11.08 9.53C11.14 9.64 11.2 9.78 11.1 9.93C11 10.08 10.95 10.18 10.81 10.32C10.67 10.47 10.54 10.58 10.41 10.72C10.28 10.86 10.15 11.01 10.33 11.31C10.51 11.61 11.01 12.31 11.69 12.94C12.57 13.75 13.3 14.04 13.58 14.16C13.86 14.28 14.13 14.24 14.33 14.04C14.56 13.81 14.82 13.49 15.08 13.16C15.34 12.83 15.62 12.78 15.9 12.87C16.18 12.96 17.17 13.49 17.38 13.69C17.59 13.89 17.73 14.03 17.8 14.14C17.87 14.25 17.84 14.56 17.63 14.76C17.43 14.96 16.84 15.2 16.56 14.99Z"/>
+    <section id="features" class="features">
+        <div class="container">
+            <h2>Возможности Restio</h2>
+            <div class="feature-grid">
+                <div class="feature-card fade-in">
+                    <div class="feature-icon">
+                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="48" height="48" rx="12" fill="#7C3AED" fill-opacity="0.1"/>
+                            <path d="M32 16.5V31.5C32 32.0523 31.5523 32.5 31 32.5H17C16.4477 32.5 16 32.0523 16 31.5V16.5C16 15.9477 16.4477 15.5 17 15.5H31C31.5523 15.5 32 15.9477 32 16.5ZM18 21.5V23.5H30V21.5H18ZM18 25.5V27.5H30V25.5H18Z" fill="#7C3AED"/>
+                            <circle cx="24" cy="19" r="2" fill="#7C3AED"/>
                         </svg>
-                        Связаться в WhatsApp
-                    </a>
+                    </div>
+                    <h3>Для гостей</h3>
+                    <p>Бронируйте столик за 4 клика прямо из 2GIS или Google Maps. Никаких звонков и ожиданий – просто выберите время и получите мгновенное подтверждение через WhatsApp/SMS.</p>
                 </div>
-                <div class="hero-illustration fade-in">
-                    <div class="emoji-grid">
-                        <span class="emoji">🍽️</span>
-                        <span class="emoji">🍷</span>
-                        <span class="emoji">👨‍🍳</span>
-                        <span class="emoji">🍝</span>
+                <div class="feature-card fade-in">
+                    <div class="feature-icon">
+                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="48" height="48" rx="12" fill="#7C3AED" fill-opacity="0.1"/>
+                            <path d="M24 15C19.0294 15 15 19.0294 15 24C15 28.9706 19.0294 33 24 33C28.9706 33 33 28.9706 33 24C33 19.0294 28.9706 15 24 15ZM27.7 26.3C27.3 26.7 26.7 26.7 26.3 26.3L24 24V19C24 18.4 24.4 18 25 18C25.6 18 26 18.4 26 19V23.2L27.7 24.9C28.1 25.3 28.1 25.9 27.7 26.3Z" fill="#7C3AED"/>
+                            <path d="M24 17C20.134 17 17 20.134 17 24C17 27.866 20.134 31 24 31C27.866 31 31 27.866 31 24C31 20.134 27.866 17 24 17ZM24 29C21.2386 29 19 26.7614 19 24C19 21.2386 21.2386 19 24 19C26.7614 19 29 21.2386 29 24C29 26.7614 26.7614 29 24 29Z" fill="#7C3AED" fill-opacity="0.3"/>
+                        </svg>
+                    </div>
+                    <h3>Для ресторанов</h3>
+                    <p>Принимайте брони через Telegram-бот одним кликом. Никаких сложных интеграций и изменений в работе – система работает параллельно с вашими процессами.</p>
+                </div>
+                <div class="feature-card fade-in">
+                    <div class="feature-icon">
+                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="48" height="48" rx="12" fill="#7C3AED" fill-opacity="0.1"/>
+                            <path d="M32 20L24 16L16 20M32 20L24 24M32 20V28L24 32M24 24L16 20M24 24V32M16 20V28L24 32" stroke="#7C3AED" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M24 16L32 20L24 24L16 20L24 16Z" fill="#7C3AED" fill-opacity="0.3"/>
+                        </svg>
+                    </div>
+                    <h3>Быстрый старт</h3>
+                    <p>Начните принимать брони уже сегодня. Просто подключите Telegram-бот и добавьте ссылку на бронирование в профиль 2GIS/Google Maps.</p>
+                </div>
+            </div>
+
+            <div class="process-flow fade-in">
+                <h3>Как это работает</h3>
+                <div class="process-steps">
+                    <div class="process-step">
+                        <div class="step-number">1</div>
+                        <div class="step-content">
+                            <h4>Гость находит ресторан</h4>
+                            <p>В 2GIS или Google Maps и видит кнопку бронирования</p>
+                        </div>
+                    </div>
+                    <div class="process-step">
+                        <div class="step-number">2</div>
+                        <div class="step-content">
+                            <h4>Быстрое бронирование</h4>
+                            <p>4 клика для выбора даты, времени и количества гостей</p>
+                        </div>
+                    </div>
+                    <div class="process-step">
+                        <div class="step-number">3</div>
+                        <div class="step-content">
+                            <h4>Уведомление ресторану</h4>
+                            <p>Запрос моментально поступает в Telegram-бот ресторана</p>
+                        </div>
+                    </div>
+                    <div class="process-step">
+                        <div class="step-number">4</div>
+                        <div class="step-content">
+                            <h4>Быстрый ответ</h4>
+                            <p>Администратор подтверждает бронь одним кликом</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Features Section -->
-    <section class="features">
+    <section id="pricing" class="pricing">
         <div class="container">
-            <div class="features-grid">
-                <!-- User Feature -->
-                <div class="feature-card fade-in">
-                    <div class="feature-emoji">📱</div>
-                    <h2 class="feature-title">Для гостей</h2>
-                    <p class="feature-text">
-                        Быстрая регистрация через OTP. Мгновенные уведомления о бронировании через WhatsApp/SMS.
-                    </p>
+            <h2>Тарифы</h2>
+            <p class="section-subtitle">Выберите подходящий тариф для вашего бизнеса</p>
+            <div class="pricing-grid">
+                <div class="pricing-card featured">
+                    <div class="popular-badge">Популярный</div>
+                    <div class="pricing-header">
+                        <h3>Lite</h3>
+                        <div class="price">Free<span> / навсегда</span></div>
+                    </div>
+                    <ul class="pricing-features">
+                        <li>До<span class="highlight-number">300</span>заявок/мес</li>
+                        <li><span class="highlight-number">1</span>сотрудник</li>
+                        <li>Только уведомления в мессенджер</li>
+                    </ul>
                 </div>
 
-                <!-- Restaurant Feature -->
-                <div class="feature-card fade-in">
-                    <div class="feature-emoji">🏪</div>
-                    <h2 class="feature-title">Для ресторанов</h2>
-                    <p class="feature-text">
-                        Управляй слотами. Получай заявки. Контролируй поток.
-                    </p>
+                <div class="pricing-card">
+                    <div class="pricing-header">
+                        <h3>Base</h3>
+                        <div class="price">$<span class="highlight-number">15</span><span> / месяц</span></div>
+                    </div>
+                    <ul class="pricing-features">
+                        <li>Безлимит заявок</li>
+                        <li><span class="highlight-number">1</span>зал</li>
+                        <li><span class="highlight-number">2</span>сотрудника</li>
+                        <li>Виджет, Telegram</li>
+                        <li>Архив<span class="highlight-number">30</span>дней</li>
+                        <li>Поддержка <span class="highlight-number">24/7</span></li>
+                    </ul>
                 </div>
 
-                <!-- Admin Feature -->
-                <div class="feature-card fade-in">
-                    <div class="feature-emoji">📊</div>
-                    <h2 class="feature-title">Для администраторов</h2>
-                    <p class="feature-text">
-                        Модерация. Поддержка. Метрики.
-                    </p>
+                <div class="pricing-card">
+                    <div class="pricing-header">
+                        <h3>Pro</h3>
+                        <div class="price">$<span class="highlight-number">30</span><span> / месяц</span></div>
+                    </div>
+                    <ul class="pricing-features">
+                        <li>Безлимит заявок</li>
+                        <li>CRM/API</li>
+                        <li>Аналитика, интеграции</li>
+                        <li>Архив<span class="highlight-number">3</span>месяца</li>
+                        <li>Поддержка <span class="highlight-number">24/7</span></li>
+                    </ul>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2>Готовы начать?</h2>
+            <a href="https://wa.me/77713760430" target="_blank" rel="noopener noreferrer" class="btn-primary">Связаться с нами</a>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <div class="footer-copyright">
-                    © 2025 Restio
+                <div class="footer-logo">
+                    <!-- Temporary inline SVG logo -->
+                    <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="0" y="8" width="24" height="24" rx="12" fill="#7C3AED"/>
+                        <text x="32" y="26" fill="#FFFFFF" font-size="20" font-weight="700">Restio</text>
+                        <circle cx="12" cy="20" r="6" fill="#EF4444"/>
+                    </svg>
                 </div>
-                <a href="mailto:contact@restio.info" class="footer-link">
-                    contact@restio.info
-                </a>
+                <div class="footer-links">
+                    <div class="footer-column">
+                        <h4>Продукт</h4>
+                        <a href="#features">Возможности</a>
+                        <a href="#pricing">Тарифы</a>
+                        <a href="#demo">Демо</a>
+                    </div>
+                    <div class="footer-column">
+                        <h4>Компания</h4>
+                        <a href="#about">О нас</a>
+                        <a href="#contact">Контакты</a>
+                        <a href="#blog">Блог</a>
+                    </div>
+                    <div class="footer-column">
+                        <h4>Поддержка</h4>
+                        <a href="mailto:contact@restio.info">contact@restio.info</a>
+                        <a href="https://wa.me/77713760430">WhatsApp</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>© 2024 Restio. Все права защищены.</p>
             </div>
         </div>
     </footer>
